--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,19 +1,24 @@
-body{
+*{
     margin: 0;
     padding: 0;
 }
 
+body{
+    margin: 0;
+    padding: 0;
+    background-color: #F8F8F8;
+}
+
 .header{
-    border-bottom: 2px solid #D9FFF5;
+    border-bottom: 4px solid #D9FFF5;
+    background-color: white;        
+    margin-bottom: 10px;
     &__navigation{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding-right: 10px;
-        padding-left: 10px;
+        padding: 15px 10px 15px 10px;
         list-style-type: none;
-        margin-bottom: 10px;
-        margin-top: 15px;
         
         &--link{
         width: 40px;
@@ -48,3 +53,4 @@ body{
     } 
 }
 }
+
