--- a/src/styles/body.scss
+++ b/src/styles/body.scss
@@ -2,30 +2,36 @@
     font-family: 'TT';
     src: url('/src/TTLakes-Regular.ttf');
 }
-body{
+
+body {
     background-color: #F8F8F8;
     font-family: 'TT';
 }
-.about{
+
+.about {
     margin-bottom: 10px;
     margin-top: 20px;
     font-weight: 100;
     padding: 0 10px 0 10px;
-    &__more{
+
+    &__more {
         display: flex;
         justify-content: left;
         margin-top: 10px;
     }
-    &__more p{
+
+    &__more p {
         margin-left: 10px;
         font-weight: bold;
         margin-top: 10px;
     }
-    &__more img{
+
+    &__more img {
         width: 40px;
     }
 }
-.company{
+
+.company {
     width: 100%;
     margin-bottom: 20px;
 }
@@ -49,7 +55,8 @@ body{
         overflow-x: auto;
         width: 100%;
         padding: 10px 5px;
-        -webkit-overflow-scrolling: touch; 
+        -webkit-overflow-scrolling: touch;
+        scrollbar-width: none;
 
         &--slide {
             font-size: 15px;
@@ -74,13 +81,14 @@ body{
         align-items: center;
         font-family: 'TT';
         font-size: 15px;
-        height: 50px;
+        height: 60px;
         color: #7E7E82;
-        padding-left: 15px;
-        padding-top: 10px;
+        padding-left: 20px;
+        padding-top: 5px;
         margin-bottom: 15px;
         background-color: white;
         border-top: 1px solid #41F6D7;
+        width: 100%;
     }
 
     &__container {
@@ -91,39 +99,140 @@ body{
         overflow-x: auto;
         width: 100%;
         padding: 10px 5px;
-        -webkit-overflow-scrolling: touch; 
-        scrollbar-width: none; /* Скрыть скроллбар */
+        scrollbar-width: none;
 
-        /* Скрыть скроллбар в WebKit браузерах */
-        &::-webkit-scrollbar {
-            display: none;
-        }
-
-        &--slide {
+        &--slideBrand {
             display: flex;
-            justify-content: space-between; /* Разделить логотип и стрелку */
+            justify-content: space-between;
             align-items: center;
             width: 200px;
             height: 50px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
             white-space: nowrap;
             background-color: white;
             border-radius: 8px;
             border: 2px solid #F8F8F8;
-            padding: 0 15px; /* Улучшенный padding */
-            flex-shrink: 0; /* КРИТИЧЕСКИ ВАЖНО! */
+            padding: 0 15px;
+            flex-shrink: 0;
+        }
+
+        &--slideTech {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 200px;
+            height: 150px;
+            white-space: nowrap;
+            background-color: white;
+            border-radius: 8px;
+            border: 2px solid #F8F8F8;
+            padding: 0 15px;
+            flex-shrink: 0;
+            position: relative;
+
+            p {
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: 10;
+                padding: 20px;
+            }
+
+            img {
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                z-index: 10;
+                padding: 20px;
+                width: 40px;
+                height: 40px;
+            }
+        }
+
+        &--slidePrice {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            width: 200px;
+            height: 150px;
+            background-color: white;
+            position: relative;
+            flex-shrink: 0;
+            border-radius: 8px;
+            border: 2px solid #F8F8F8;
+            padding: 10px;
         }
     }
+}
+
+.slidePrice-element {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    width: 150px;
+
+    h3 {
+        font-size: 12px;
+        color: #7E7E82;
+        width: 150px;
+    }
+
+    p {
+        font-size: 12px;
+    }
+}
+
+.order-btn {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    margin-bottom: 15px;
+    margin-right: 10px;
+    width: 100px;
+    height: 30px;
+    border: none;
+    border-radius: 15px;
+    background-color: #FF3E79;
+    color: white;
+    font-size: 13px;
+    font-family: 'TT';
+    font-weight: 600;
 }
 
 .logo-company {
     width: 70px;
     height: 20px;
-    object-fit: contain; /* Сохранить пропорции логотипов */
+    object-fit: contain;
 }
 
-.strelka {
+.go-btn {
     width: 30px;
     height: 30px;
     object-fit: contain;
+}
+
+.get{
+    padding: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    width: 250px;
+    &-img{
+        color: #FF3E79;
+        margin-left: 5px;
+    }
+}
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 13px;
+    font-weight: 300;
+    gap: 10px;
+    margin-top: 20px;
+    &__row{
+        color: #7E7E82;
+        text-align: center;
+        width: 300px;
+    }
 }
