Media 768px done

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -14,12 +14,36 @@ body {
     background-color: white;
     margin-bottom: 10px;
 
-    &__navigation {
+    &-left {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        width: 55%;
+
+        @media (min-width: 768px) {
+            justify-content: flex-start;
+            gap: 4vw;
+        }
+    }
+
+    &-right {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 45%;
+
+        @media (min-width: 768px) {
+            justify-content: flex-end;
+            gap: 3vw;
+        }
+    }
+
+    &__navigation {
+        display: flex;
+        align-items: center;
         padding: 15px 10px 15px 10px;
         list-style-type: none;
+
 
         &--link {
             width: 40px;
@@ -47,6 +71,7 @@ body {
 
         &--logo img {
             width: 90px;
+            margin-right: 5vw;
         }
 
         &--divider {
@@ -55,12 +80,14 @@ body {
             border-radius: 8px;
             background-color: #EAEAEA;
         }
+
         &--divider1 {
             width: 4px;
             height: 35px;
             border-radius: 8px;
             background-color: #EAEAEA;
             display: none;
+
             @media (min-width: 768px) {
                 display: block;
             }
