--- a/src/styles/body.scss
+++ b/src/styles/body.scss
@@ -8,20 +8,73 @@ body {
     font-family: 'TT';
 }
 
+html,
+body {
+    overflow-x: hidden;
+    max-width: 100vw;
+}
+
 .about {
     margin-bottom: 10px;
     margin-top: 20px;
     font-weight: 100;
-    padding: 0 10px 0 10px;
+    width: 100%;
 
-    &__more {
+
+    @media (min-width: 768px) {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        gap: 20px;
+        width: 90%;
+        margin-left: 10px;
+    }
+
+    &-text {
+        @media (min-width: 768px) {
+            width: 100%;
+            margin-right: 20px;
+            margin-bottom: 10px;
+        }
+
+        &--hidden {
+            display: none;
+
+            @media (min-width: 768px) {
+                display: block;
+                margin-top: 10px;
+            }
+        }
+    }
+
+    p {
+        padding-left: 10px;
+    }
+
+    &-text__more {
         display: flex;
         justify-content: left;
+        flex-direction: row;
         margin-top: 10px;
+        margin-left: 5px;
+        font-weight: bold;
+        margin-bottom: 20px;
+
+
+        &-hidden {
+            display: none;
+            margin-bottom: 2vw;
+            padding-left: 20px;
+            gap: 5px;
+            align-items: center;
+
+            @media (min-width: 768px) {
+                display: flex;
+            }
+        }
     }
 
     &__more p {
-        margin-left: 10px;
+        margin-left: 5px;
         font-weight: bold;
         margin-top: 10px;
     }
@@ -33,7 +86,11 @@ body {
 
 .company {
     width: 100%;
-    margin-bottom: 20px;
+
+    @media (min-width: 768px) {
+        width: 100%;
+        border-radius: 0.5em;
+    }
 }
 
 .services {
@@ -95,11 +152,19 @@ body {
         margin-left: 5px;
         margin-bottom: 10px;
         display: flex;
-        gap: 16px;
+        gap: 25px;
         overflow-x: auto;
         width: 100%;
         padding: 10px 5px;
         scrollbar-width: none;
+
+        @media (min-width: 768px) {
+            display: grid;
+            grid-template-columns: 30% 30% 30%;
+            gap: 3%;
+            max-height: 150px;
+            overflow: hidden;
+        }
 
         &--slideBrand {
             display: flex;
@@ -160,33 +225,80 @@ body {
             border-radius: 8px;
             border: 2px solid #F8F8F8;
             padding: 10px;
+
+            @media (min-width: 768px) {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-around;
+                width: 95%;
+                height: 50px;
+                align-items: center;
+            }
         }
     }
+}
+
+.prices {
+    @media (min-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        gap: 0;
+        max-height: max-content;
+        overflow: auto;
+    }
+
 }
 
 .slidePrice-element {
     display: flex;
     flex-direction: column;
     gap: 3px;
-    width: 150px;
+    width: 100px;
 
     h3 {
         font-size: 12px;
         color: #7E7E82;
         width: 150px;
+
+        @media (min-width: 768px) {
+            display: none;
+        }
     }
 
     p {
         font-size: 12px;
+        width: 200px;
+
+        @media (min-width: 768px) {
+            font-size: 14px;
+            width: 250px;
+        }
     }
+}
+
+.price-head-hidden {
+    display: none;
+
+    @media (min-width: 768px) {
+        display: flex;
+        background: none;
+        font-size: 20px;
+        color: darkgrey;
+        font-weight: 100;
+    }
+}
+
+.desc-price {
+    margin-right: 30px;
+    width: 60%;
 }
 
 .order-btn {
     position: absolute;
     right: 0;
     bottom: 0;
-    margin-bottom: 15px;
     margin-right: 10px;
+    margin-bottom: 15px;
     width: 100px;
     height: 30px;
     border: none;
@@ -196,6 +308,12 @@ body {
     font-size: 13px;
     font-family: 'TT';
     font-weight: 600;
+    cursor: pointer;
+
+    @media (min-width: 768px) {
+        position: relative;
+        margin-bottom: 0;
+    }
 }
 
 .logo-company {
@@ -208,31 +326,22 @@ body {
     width: 30px;
     height: 30px;
     object-fit: contain;
+    cursor: pointer;
 }
 
-.get{
+.get {
     padding: 10px;
     font-size: 16px;
     font-weight: bold;
-    width: 250px;
-    &-img{
+    width: 70%;
+
+    @media (min-width: 768px) {
+        width: 100%;
+        padding-left: 20px;
+    }
+
+    &-img {
         color: #FF3E79;
         margin-left: 5px;
-    }
-}
-
-.footer{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 13px;
-    font-weight: 300;
-    gap: 10px;
-    margin-top: 20px;
-    &__row{
-        color: #7E7E82;
-        text-align: center;
-        width: 300px;
     }
 }
