--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,4 @@
-@use "./styles/header.scss"; 
-@use "./styles/footer.scss"; 
+@use "./styles/header.scss";
+@use "./styles/footer.scss";
 @use "./styles/body.scss";
+@use "./styles/burger.scss";
