--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -6,8 +6,12 @@
     text-align: center;
     font-size: 13px;
     font-weight: 300;
+    padding: 15px;
+    height: 70px;
     gap: 10px;
     margin-top: 20px;
+    color: #7E7E82;
+    border-top: 4px solid #D9FFF5;
 
     @media (min-width: 768px) {
         display: flex;
@@ -16,7 +20,7 @@
         padding-right: 10px;
 
         &__row {
-            color: #7E7E82;
+
             text-align: center;
             width: 300px;
 
