--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -12,6 +12,7 @@ body {
 .header {
     border-bottom: 4px solid #D9FFF5;
     background-color: white;
+    height: 85px;
 
     &-left {
         display: flex;
