--- a/src/styles/burger.scss
+++ b/src/styles/burger.scss
@@ -1,7 +1,114 @@
+@font-face {
+    font-family: 'TT';
+    src: url('/src/TTLakes-Regular.ttf');
+}
+
 #burger-menu {
     display: none;
+    /*     position: fixed;
+    top: 0;
+    left: 0; */
     width: 100%;
     height: 100vh;
+    z-index: 100;
+    overflow-y: auto;
     background-color: white;
-    z-index: 1000;
+
+    @media (min-width: 768px) {
+        width: 320px;
+    }
+
+}
+
+.burger-search {
+    display: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    background-color: #FF3E79;
+    justify-content: center;
+    align-items: center;
+    align-content: flex-end;
+    margin-left: auto;
+}
+
+.burger-hidden {
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    background-color: #FF3E79;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.burger-menu {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    overflow-y: auto;
+
+    &__list {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        margin-top: 20px;
+        list-style-type: none;
+        margin-bottom: 25px;
+
+        &--link {
+            color: black;
+            padding-left: 20px;
+
+            &-active {
+                color: darkgray;
+                border-left: 4px solid #41F6D7;
+                padding-left: 16px;
+            }
+        }
+    }
+
+    &__btns {
+        display: flex;
+        gap: 20px;
+        margin-left: 20px;
+        margin-bottom: 15px;
+    }
+
+    &__info {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 10px;
+        padding-left: 20px;
+        margin-bottom: 5px;
+
+        p {
+            font-weight: bold;
+        }
+
+        h3 {
+            font-weight: bold;
+            font-size: 20px;
+        }
+    }
+
+    &__languages {
+        display: flex;
+        gap: 15px;
+        margin-left: 20px;
+        margin-top: 10px;
+
+        button {
+            border: none;
+            font-family: 'TT';
+            background: none;
+            font-weight: bold;
+            font-size: 15px;
+        }
+    }
+}
+
+.language-active {
+    color: darkgray;
 }
