--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -53,6 +53,7 @@ body {
             display: flex;
             justify-content: center;
             align-items: center;
+            cursor: pointer;
 
             &-hidden {
                 display: none;
@@ -62,6 +63,7 @@ body {
                 background-color: #FF3E79;
                 justify-content: center;
                 align-items: center;
+                cursor: pointer;
 
                 @media(min-width: 768px) {
                     display: flex;
