--- a/src/styles/burger.scss
+++ b/src/styles/burger.scss
@@ -65,11 +65,12 @@
             width: 40px;
             height: 40px;
             border-radius: 100%;
-            background-color: #FF3E79;
+            background-color: var(--pink-item);
             display: flex;
             justify-content: center;
             align-items: center;
             flex-shrink: 0;
+            cursor: pointer;
         }
 
         &--logo img {
@@ -107,8 +108,8 @@
             padding-left: 20px;
 
             &-active {
-                color: darkgray;
-                border-left: 4px solid #41F6D7;
+                color: var(--gray);
+                border-left: 4px solid var(--cyan-border);
                 padding-left: 16px;
             }
         }
@@ -151,10 +152,11 @@
             background: none;
             font-weight: bold;
             font-size: 15px;
+            cursor: pointer;
         }
     }
 }
 
 .language-active {
-    color: darkgray;
+    color: var(--gray);
 }
