--- a/src/styles/body.scss
+++ b/src/styles/body.scss
@@ -61,6 +61,8 @@ body {
     }
 
     &-text {
+        margin-left: 10px;
+
         &__more {
             display: flex;
             align-items: center;
@@ -257,7 +259,6 @@ body {
         margin-left: 5px;
         margin-bottom: 10px;
         display: flex;
-        // gap: 20px; - мешает слайдеру
         width: 100%;
         height: auto;
         padding: 10px 5px;
