--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -74,6 +74,10 @@
     overflow-y: auto;
     position: relative;
 
+    p {
+        padding-left: 10px;
+    }
+
     &__heading {
         font-family: 'TT';
         font-size: 20px;
